<?xml version="1.0" encoding="UTF-8"?>
<ui version="4.0">
 <class>gdaxAccountSetupWindow</class>
 <widget class="QWidget" name="gdaxAccountSetupWindow">
  <property name="geometry">
   <rect>
    <x>0</x>
    <y>0</y>
    <width>299</width>
    <height>318</height>
   </rect>
  </property>
  <property name="windowTitle">
   <string>GDAX Accounts</string>
  </property>
  <widget class="QPushButton" name="mAddButton">
   <property name="geometry">
    <rect>
     <x>220</x>
     <y>9</y>
     <width>75</width>
     <height>23</height>
    </rect>
   </property>
   <property name="text">
    <string>Add</string>
   </property>
  </widget>
  <widget class="QPushButton" name="mRemoveButton">
   <property name="geometry">
    <rect>
     <x>220</x>
     <y>39</y>
     <width>75</width>
     <height>23</height>
    </rect>
   </property>
   <property name="text">
    <string>Remove</string>
   </property>
  </widget>
  <widget class="QPushButton" name="mDoneButton">
   <property name="geometry">
    <rect>
     <x>220</x>
     <y>289</y>
     <width>75</width>
     <height>23</height>
    </rect>
   </property>
   <property name="text">
    <string>Done</string>
   </property>
  </widget>
  <widget class="QListWidget" name="mAccountList">
   <property name="geometry">
    <rect>
     <x>10</x>
     <y>40</y>
     <width>201</width>
     <height>271</height>
    </rect>
   </property>
  </widget>
 </widget>
 <resources/>
 <connections/>
</ui>
